# pycounts_dgarg1

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  einstein.txt  example.ipynb  make.bat
src/pycounts_dgarg1/: __init__.py
tests/: test_pycounts_dgarg1.py
