[tool.poetry]
name = "pycounts_dgarg1"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Dhruv Garg"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
