[tool.poetry]
name = "pycounts_dgarg1"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Dhruv Garg"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
jupyter = "^1.1.1"
myst-nb = {version = "^1.1.2", python = "^3.9"}
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"
pytest-cov = "^6.0.0"
python-semantic-release = {version = "^9.17.0", python = "^3.12"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version",]
